# parallel-maximum-bipartite-subgraphs-search

./: analyse.ipynb
.ipynb_checkpoints/: analyse-checkpoint.ipynb
DivideSearchSpace/: CMakeLists.txt  main.cpp
GraphGenerator/: CMakeLists.txt  command.h  commands.txt  filenames.txt  main.cpp
MBPCombined/: CMakeLists.txt  adjacency_list.h  color.h  config.h  csv.h  data-parallel.csv  distrib.csv  edge_list.h  explorer.h  finder.h  main.cpp  master.h  process.h  read.h  seq.csv  setting.h  slave.h  state.h  table.h  task-parallel.csv
MBPCombined/docs/: Doxyfile
MBPCombined/docs/html/: adjacency__list_8h.html  adjacency__list_8h__dep__incl.map  adjacency__list_8h__dep__incl.md5  adjacency__list_8h__incl.map  adjacency__list_8h__incl.md5  adjacency__list_8h_source.html  annotated.html  args_8h.html  args_8h__dep__incl.map  args_8h__dep__incl.md5  args_8h__incl.map  args_8h__incl.md5  args_8h_source.html  classes.html  classpdp_1_1args-members.html  classpdp_1_1args.html  classpdp_1_1args__coll__graph.map  classpdp_1_1args__coll__graph.md5  classpdp_1_1csv-members.html  classpdp_1_1csv.html  classpdp_1_1csv__coll__graph.map  classpdp_1_1csv__coll__graph.md5  classpdp_1_1finder_1_1data__parallel-members.html  classpdp_1_1finder_1_1data__parallel.html  classpdp_1_1finder_1_1data__parallel__coll__graph.map  classpdp_1_1finder_1_1data__parallel__coll__graph.md5  classpdp_1_1finder_1_1explorer-members.html  classpdp_1_1finder_1_1explorer.html  classpdp_1_1finder_1_1explorer__coll__graph.map  classpdp_1_1finder_1_1sequential.html  (+147 more)
MBPDataParallelism/: AdjacencyListGraph.h  CMakeLists.txt  Explorer.h  Finder.h  README.md  State.h  main.cpp
MBPDistributed/: AdjacencyGraph.h  CMakeLists.txt  Edge.h  EdgeGraph.h  Explorer.h  Finder.h  Master.h  Process.h  Slave.h  State.h  adjency_graph.h  args.h  config.h  edge.h  edge_graph.h  explorer.h  finder.h  main.cpp  master.h  process.h  read.h  setting.h  slave.h  state.h
MBPSequential/: AdjencyListGraph.h  CMakeLists.txt  Color.h  Edge.h  EdgeListGraph.h  Finder.h  Graph.h  README.md  State.h  main.cpp  read.h  utils.h
MBPTaskParallelism/: CMakeLists.txt  Finder.h  README.md  State.h  main.cpp
TryBoostMPI/: CMakeLists.txt  main.cpp
TryMPI/: CMakeLists.txt  hosts  main.cpp
TryOpenMP/: CMakeLists.txt  main.cpp
generated-graphs/: 12-3.txt  12-4.txt  12-5.txt  12-6.txt  13-3.txt  13-4.txt  13-5.txt  13-6.txt  14-3.txt  14-4.txt  14-5.txt  14-6.txt  14-7.txt  15-3.txt  15-4.txt  15-5.txt  15-6.txt  15-7.txt  16-3.txt  16-4.txt  16-5.txt  16-6.txt  16-7.txt  16-8.txt  17-3.txt  17-4.txt  17-5.txt  17-6.txt  17-7.txt  17-8.txt  18-3.txt  18-4.txt  18-5.txt  19-3.txt  19-4.txt  19-5.txt  20-3.txt  20-4.txt  20-5.txt  21-3.txt  (+88 more)
report/report/: main.tex
results/: distributed-res.csv  parallel-data-res.csv  parallel-task-res.csv  seq-res.csv
(+182 files in other folders)
